--- a/templates/d3/index.html
+++ b/templates/d3/index.html
@@ -44,6 +44,7 @@
             <ul class="dropdown-menu">
               <li><a href="../../static/d3/html/gw_story.html">Climate Change ~ Global Warming</a></li>
               <li><a href="../../static/d3/html/explore_process.html">Exploring Data</a></li>
+              <li><a href="../../static/d3/html/correlation_process.html">Correlating Data</a></li>
               <li><a href="../../static/d3/html/global_temps.html">Global Temperatures</a></li>
               <li><a href="../../static/d3/html/temps_by_country.html">Temperatures by Country</a></li>
               <li><a href="../../static/d3/html/co2_temps.html">CO2</a></li>
